CHANGES
=======

* Incorporate p4 switch
* Added a scapy switch to simulate p4 umbrella
* Added VLAN support, as well as multiple ifaces per host
* Rework config and added vlan support
* Added support for multiple connections from a host
* Added CLI and more ping flexibility
* Added better error checking in parser
* fixed openvswitch issues
* Fixed a word in gitgnore
* Updated gitignore
* Added parser and setup from wide setup
* Added script for ixpmanager and added dpid support
* Changed dockerfile to allow for standalone usage
* Automate docker build and running topology tester
* Added needed docker components
* Cleaned up code to allow for packaging for docker
* Added checker to validate config files
* Create README.md
* Initial commit